# cassettedb

./: .gitignore  ANNOUNCEMENT.md  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  cassette.h  cbindgen.toml  example.wal
.github/workflows/: ci.yml  release.yml
.omo/run-continuation/: ses_158122898ffep2BmnG0muN8m89.json  ses_158cf707affeVTgBFR6uIwpW65.json
benches/: cassettedb_bench.rs  cassettedb_benchmarks.rs
bindings/go/: cassettedb.go  go.mod
bindings/node/: Cargo.toml  index.d.ts  index.js  package.json
bindings/node/src/: lib.rs
bindings/python/: pyproject.toml
bindings/python/cassettedb/: __init__.py
docs/: SQLITE_BENCHMARK.md
examples/: c_example  c_example.c
fuzz/: Cargo.toml
fuzz/targets/: fuzz_storage.rs
libcassettedb/: Cargo.toml
libcassettedb/src/: lib.rs
scripts/: build.ps1  build.py  build.sh
src/: backup.rs  cli.rs  cluster.rs  config_migration.rs  crash_reporter.rs  db.rs  dist_tx.rs  document.rs  engine.rs  error.rs  feedback.rs  index.rs  lib.rs  metrics.rs  python.rs  query.rs  raft.rs  repl.rs  replication.rs  search.rs  shard.rs  storage.rs  sync.rs  transaction.rs  wal.rs
src/server/: auth.rs  http.rs  mod.rs  multidb.rs  pool.rs  tcp.rs
