[package]
name = "cassettedb-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"

[dependencies.cassettedb]
path = ".."

[[bin]]
name = "fuzz_storage"
path = "targets/fuzz_storage.rs"
test = false
doc = false
