[package]
name = "cassettedb-node"
version = "0.9.0"
edition = "2021"
authors = ["synthalorian <synth@example.com>"]
license = "MIT"
repository = "https://github.com/synthalorian/cassettedb"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16", default-features = false, features = ["napi8"] }
napi-derive = "2.16"
cassettedb = { path = "../.." }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.1"
